tutorial cambios y ajuste de la camara
He cambiado varias muchas cosas en el tutorial y he añadido muchas nuevas, decid que os parece, proponed cambios, etc etc.

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,6 @@ sysinfo.txt
 *.apk
 *.unitypackage
 Library/UnityAssemblies/version.txt
+Assets/_Scenes/Tutorial.unity
+Assets/_Scenes/Tutorial.unity
+ProjectSettings/ProjectVersion.txt
