--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ Library/UnityAssemblies/version.txt
 Assets/_Scenes/Tutorial.unity
 Assets/_Scenes/Tutorial.unity
 ProjectSettings/ProjectVersion.txt
+*.meta
